--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,44 +1,44 @@
-name: Deploy to Azure App Service
+name: Analysis Sonar
 
 on:
   push:
     branches:
-      - main
+      - master
+  pull_request:
+    types: [opened, synchronize, reopened]
 
 jobs:
-  build-and-deploy:
+  sonarcloud:
+    name: SonarCloud scan
     runs-on: ubuntu-latest
 
     steps:
-      - name: Setup Java 17
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Setup JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'temurin'
 
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Setup Maven
-        uses: actions/setup-java@v3
+      - name: SonarCloud packages
+        uses: actions/cache@v3
         with:
-          java-version: '17'
-          distribution: 'temurin'
-          maven-version: '3.x'
+          path: ~/.sonar/cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: ${{ runner.os }}-sonar
 
-      - name: Restore dependencies (Maven)
-        run: mvn install -DskipTests
-
-      - name: Build the project
-        run: mvn clean install --no-transfer-progress
-
-      - name: Publish the project
-        run: mvn spring-boot:build-image
-
-      - name: Deploy to Azure App Service
-        uses: azure/webapps-deploy@v2
+      - name: Maven
+        uses: actions/cache@v3
         with:
-          app-name: "sistemadeprontuarios"
-          slot-name: "production"
-          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          package: ./publish
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
+
+      - name: Build
+        env:
+          GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=GuiBertoldi_TCCbackend
