--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,3 +42,45 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=GuiBertoldi_TCCbackend
+
+build:
+  name: Build Docker
+  runs-on: ubuntu-latest
+  needs: sonarcloud
+
+  steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Setup Java
+      uses: actions/setup-java@v3
+      with:
+        distribution: 'temurin'
+        java-version: '17'
+
+    - name: Build project
+      run: mvn clean install -DskipTests
+
+    - name: Login Docker Hub
+      run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Build Docker image
+      run: docker build -t ${{ secrets.DOCKER_USERNAME }}/TCCbackend .
+
+    - name: Push Docker image
+      run: docker push ${{ secrets.DOCKER_USERNAME }}/TCCbackend
+
+  deploy:
+    name: Deploy to AWS
+    runs-on: self-hosted
+    needs: build
+
+    steps:
+      - name: Pull image from Docker Hub
+        run: sudo docker pull ${{ secrets.DOCKER_USERNAME }}/TCCbackend:latest
+
+      - name: Remove existing Docker container
+        run: sudo docker rm -f TCCbackend
+
+      - name: Run Docker container
+        run: sudo docker run -d -p 8080:8080 -e 'DATABASE_USERNAME=${{secrets.DATABASE_USERNAME}}' -e 'DATABASE_PASSWORD=${{secrets.DATABASE_PASSWORD}}' -e 'DATABASE_URL=${{secrets.DATABASE_URL}}' -e 'JWT_ENCODING=${{secrets.JWT_ENCODING}}' --name TCCbackend ${{secrets.DOCKER_USERNAME}}/TCCbackend:latest
