--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.application.name=backend
-spring.datasource.url=jdbc:postgresql://localhost:5432/db_psicologa
-spring.datasource.username=postgres
-spring.datasource.password=admin
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
+spring.data.web.pageable.default-page-size=10
+spring.data.web.pageable.max-page-size=50
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
