ajustando application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 spring.application.name=backend
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:postgresql://ls-5504bb4fe3d2b79e7b4edfcce769cc34aa919651.cpiukemss1xm.us-east-1.rds.amazonaws.com:5432/db_psicologa
-spring.datasource.username=dbmasteruser
-spring.datasource.password=oe_V6J$[snB3fadb1%bdDC+^L{hM`vu(
+spring.datasource.url=jdbc:postgresql://database-1.c1ygy02eybed.sa-east-1.rds.amazonaws.com:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=Ze01CLjXSZ6souTX0ZWY
+#spring.datasource.url=jdbc:postgresql://localhost:5432/db_psicologa
+#spring.datasource.username=postgres
+#spring.datasource.password=admin
 spring.data.web.pageable.default-page-size=10
 spring.data.web.pageable.max-page-size=50
 
