--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,8 +68,8 @@ jobs:
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
       - name: Build & Push
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/tccbackend .
-          docker push ${{ secrets.DOCKER_USERNAME }}/tccbackend
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/tccbackend:latest .
+          docker push ${{ secrets.DOCKER_USERNAME }}/tccbackend:latest
 
   deploy:
     name: Deploy to AWS
@@ -79,9 +79,9 @@ jobs:
     steps:
       - name: Pull & Run
         run: |
-          docker pull ${{ secrets.DOCKER_USERNAME }}/tccbackend:latest
-          docker rm -f tccbackend || true
-          docker run -d -p 8080:8080 \
+          sudo docker pull ${{ secrets.DOCKER_USERNAME }}/tccbackend:latest
+          sudo docker rm -f tccbackend || true
+          sudo docker run -d -p 8080:8080 \
             -e DATABASE_USERNAME=${{ secrets.DATABASE_USERNAME }} \
             -e DATABASE_PASSWORD=${{ secrets.DATABASE_PASSWORD }} \
             -e DATABASE_URL=${{ secrets.DATABASE_URL }} \
