--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,7 +73,7 @@ jobs:
 
   deploy:
     name: Deploy to AWS
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     needs: build-docker
 
     steps:
