--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:postgresql://database-1.c1ygy02eybed.sa-east-1.rds.amazonaws.com:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=Ze01CLjXSZ6souTX0ZWY
+#spring.datasource.url=jdbc:postgresql://localhost:5432/db_psicologa
+#spring.datasource.username=postgres
+#spring.datasource.password=admin
 spring.data.web.pageable.default-page-size=10
 spring.data.web.pageable.max-page-size=50
 
@@ -13,6 +16,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
 
 server.port=8443
+server.ssl.enabled=true
 server.ssl.key-store=/app/certs/keystore.p12
 server.ssl.key-store-password=${KEYSTORE_PASSWORD}
 server.ssl.keyStoreType=PKCS12
